feat: use tencent-vpc and tencent-postgresql components to deploy project quickly

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,10 +10,11 @@
   "author": "yugasun",
   "license": "MIT",
   "dependencies": {
-    "ioredis": "^4.28.3",
+    "knex": "^1.0.3",
     "koa": "^2.11.0",
     "koa-body": "^4.2.0",
     "koa-router": "^8.0.8",
+    "pg": "^8.7.3",
     "uuid": "^8.3.2"
   }
 }
